Revert "Add react-native-cli to dependencies"
This reverts commit 247ad0bcc9785757cd438822a942013eb90b1083.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "envfile": "2.3.0",
     "file-url": "2.0.2",
     "inquirer": "6.0.0",
-    "react-native": "0.55.4",
-    "react-native-cli": "2.0.1"
+    "react-native": "0.55.4"
   },
   "preferGlobal": true,
   "bin": "./index.js"
